[build-system]
requires = ["setuptools>=62.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mani-skill"
version = "3.0.0b22"
description = "ManiSkill3: A Unified Benchmark for Generalizable Manipulation Skills"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy",
    "dacite",
    "gymnasium>=0.29.1",
    "h5py",
    "pyyaml",
    "tqdm",
    "GitPython",
    "tabulate",
    "transforms3d",
    "trimesh",
    "imageio",
    "imageio[ffmpeg]",
    "IPython",
    "pytorch-kinematics==0.7.6",
    "nvidia-ml-py",
    "tyro>=0.8.5",
    "huggingface_hub",
    "sapien>=3.0.0;platform_system=='Linux'",
    "sapien>=3.0.0.b1;platform_system=='Windows'",
    "sapien>=3.0.2;platform_system=='Darwin'",
]

[project.optional-dependencies]
pytorch = [
    "torch==2.5.1+cu124",
    "torchvision==0.20.1+cu124",
    "torchaudio==2.5.1+cu124",
]
dev = [
    "pytest",
    "black",
    "isort",
    "pre-commit",
    "build",
    "twine",
    "stable-baselines3",
    "nvidia-ml-py",
    "pytest-xdist[psutil]",
    "pytest-forked",
]
docs = [
    "sphinx==6.2.1",
    "sphinx-autobuild",
    "pydata-sphinx-theme",
    "sphinxcontrib-spelling",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "myst-parser",
    "sphinx-subfigure",
    "sphinxcontrib-video",
    "sphinx-togglebutton",
    "sphinx-design",
    "sphinx-autoapi",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
    "gpu_sim: marks tests as using the GPU simulation (deselect with '-m \"not gpu_sim\"')",
    "serial",
]